Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98471

[REG: 5->6.2.1] Null QDateTime is not stored as NULL anymore in Oracle OCI

XMLWordPrintable

    • 999d856bc8 (qt/qtbase/dev) 999d856bc8 (qt/tqtc-qtbase/dev) d2e8310680 (qt/qtbase/6.2.3) d2e8310680 (qt/tqtc-qtbase/6.2.3) 2d7c19fde2 (qt/qtbase/6.3) 2d7c19fde2 (qt/tqtc-qtbase/6.3) 3474ae0d40 (qt/qtbase/6.2) 3474ae0d40 (qt/tqtc-qtbase/6.2)

      In Qt 5.14 at least, passing QDateTime() to bindValue() ended up as NULL in the database. Now in Qt 6, it instead seems to be able to produce invalid datetime entry in the database (and not null).

      After running such insert, the new row in the database is showing invalid date ('00.00.0000').

        For Gerrit Dashboard: QTBUG-98471
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: